fix title alignment, pictures display, content alignment
- title wasn't aligned corretly, changed the top margin value
- defined image behavior based on screen size and made them display the same size
- fixed content alignment, got rid of the unecessary horizontal scroll bar

--- a/museum.css
+++ b/museum.css
@@ -67,3 +67,22 @@ body {
 		font-size: 0.9rem;
 	}
 }
+
+
+@media (min-width: 576px) {
+	/* this makes the images inside cards in index to be the same size */
+	.img-fluid {
+		width: 100%;
+	    height: 50vw;
+	    object-fit: cover;
+	}
+}
+
+@media (min-width: 768px) {
+	/* this makes the images inside cards in index to be the same size */
+	.img-fluid {
+		width: 100%;
+	    height: 40vw;
+	    object-fit: cover;
+	}
+}
